Connection string name changed

--- a/TravelCatalog/Web.config
+++ b/TravelCatalog/Web.config
@@ -10,7 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-TravelCatalog-20170918121839.mdf;Initial Catalog=aspnet-TravelCatalog-20170918121839;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="TravelCatalogDb" connectionString="Data Source=.;Initial Catalog=TravelCatalogDB;Integrated Security=True" providerName="System.Data.SqlClient"/>
+    <add name="TravelCatalog" connectionString="Data Source=.;Initial Catalog=TravelCatalogDB;Integrated Security=True" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
