--- a/TravelCatalog.IntegrationTests/App.config
+++ b/TravelCatalog.IntegrationTests/App.config
@@ -2,6 +2,6 @@
 <configuration>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-TravelCatalog-20170918121839.mdf;Initial Catalog=aspnet-TravelCatalog-20170918121839;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="TravelCatalogDb_SIT" connectionString="Data Source=.;Initial Catalog=TravelCatalogDB_SIT;Integrated Security=True" providerName="System.Data.SqlClient"/>
+    <add name="TravelCatalog_SIT" connectionString="Data Source=.;Initial Catalog=TravelCatalogDB_SIT;Integrated Security=True" providerName="System.Data.SqlClient"/>
   </connectionStrings>
 </configuration>
