--- a/TravelCatalog.Data/TravelCatalog.Data.csproj
+++ b/TravelCatalog.Data/TravelCatalog.Data.csproj
@@ -30,6 +30,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Bytes2you.Validation, Version=2.0.0.0, Culture=neutral, PublicKeyToken=a7d501dd757e0442, processorArchitecture=MSIL">
+      <HintPath>..\packages\Bytes2you.Validation.2.0.0.0\lib\portable-win+net40+sl40+wp+Xbox40\Bytes2you.Validation.dll</HintPath>
+    </Reference>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
       <Private>True</Private>
@@ -49,6 +52,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EfDbSetWrappers\EfDbSetWrapper.cs" />
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="TravelCatalogDbContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -58,6 +62,10 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\TravelCatalog.Data.Contracts\TravelCatalog.Data.Contracts.csproj">
+      <Project>{2357d8db-7819-4951-9585-ae71d121e068}</Project>
+      <Name>TravelCatalog.Data.Contracts</Name>
+    </ProjectReference>
     <ProjectReference Include="..\TravelCatalog.Models\TravelCatalog.Models.csproj">
       <Project>{51a4d86b-6c8e-493a-8883-f316f8983274}</Project>
       <Name>TravelCatalog.Models</Name>
