Added Ninject, service layer for travels, search for travels by name, search view model, travels detail view

--- a/TravelCatalog.Data/TravelCatalog.Data.csproj
+++ b/TravelCatalog.Data/TravelCatalog.Data.csproj
@@ -60,6 +60,13 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+    <Content Include="Web.config" />
+    <Content Include="Web.Debug.config">
+      <DependentUpon>Web.config</DependentUpon>
+    </Content>
+    <Content Include="Web.Release.config">
+      <DependentUpon>Web.config</DependentUpon>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TravelCatalog.Data.Contracts\TravelCatalog.Data.Contracts.csproj">
