--- a/TravelCatalog.IntegrationTests/App.config
+++ b/TravelCatalog.IntegrationTests/App.config
@@ -1,7 +1,7 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-TravelCatalog-20170918121839.mdf;Initial Catalog=aspnet-TravelCatalog-20170918121839;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-TravelCatalog-20170918121839.mdf;Initial Catalog=aspnet-TravelCatalog-20170918121839;Integrated Security=True" providerName="System.Data.SqlClient"/>
     <add name="TravelCatalog_SIT" connectionString="Data Source=.;Initial Catalog=TravelCatalogDB_SIT;Integrated Security=True" providerName="System.Data.SqlClient"/>
   </connectionStrings>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/></startup></configuration>
