--- a/TravelCatalog.DataServices/TravelCatalog.DataServices.csproj
+++ b/TravelCatalog.DataServices/TravelCatalog.DataServices.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{2357D8DB-7819-4951-9585-AE71D121E068}</ProjectGuid>
+    <ProjectGuid>{08A83DA2-E768-4F78-8526-A87B0D441DDE}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>TravelCatalog.Data.Contracts</RootNamespace>
-    <AssemblyName>TravelCatalog.Data.Contracts</AssemblyName>
+    <RootNamespace>TravelCatalog.DataServices</RootNamespace>
+    <AssemblyName>TravelCatalog.DataServices</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
@@ -31,6 +31,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Bytes2you.Validation, Version=2.0.0.0, Culture=neutral, PublicKeyToken=a7d501dd757e0442, processorArchitecture=MSIL">
+      <HintPath>..\packages\Bytes2you.Validation.2.0.0.0\lib\portable-win+net40+sl40+wp+Xbox40\Bytes2you.Validation.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -41,9 +44,26 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IEfDbSetWrapper.cs" />
-    <Compile Include="ITravelCatalogDbContextSaveChanges.cs" />
+    <Compile Include="Contracts\ITravelService.cs" />
+    <Compile Include="TravelService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\TravelCatalog.Data.Contracts\TravelCatalog.Data.Contracts.csproj">
+      <Project>{2357d8db-7819-4951-9585-ae71d121e068}</Project>
+      <Name>TravelCatalog.Data.Contracts</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\TravelCatalog.Data\TravelCatalog.Data.csproj">
+      <Project>{b089a7ee-2f93-4921-9a56-10fcd37914ca}</Project>
+      <Name>TravelCatalog.Data</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\TravelCatalog.Models\TravelCatalog.Models.csproj">
+      <Project>{51a4d86b-6c8e-493a-8883-f316f8983274}</Project>
+      <Name>TravelCatalog.Models</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
