--- a/TravelCatalog.Models/TravelCatalog.Models.csproj
+++ b/TravelCatalog.Models/TravelCatalog.Models.csproj
@@ -55,11 +55,11 @@
   <ItemGroup>
     <Compile Include="ApplicationUser.cs" />
     <Compile Include="Image.cs" />
-    <Compile Include="Language.cs" />
+    <Compile Include="Languages.cs" />
     <Compile Include="Mountain.cs" />
     <Compile Include="Travel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Travel_Translated.cs" />
+    <Compile Include="TravelTranslationalInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
