--- a/TravelAlbum.Web/Views/Web.config
+++ b/TravelAlbum.Web/Views/Web.config
@@ -17,7 +17,7 @@
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Optimization"/>
         <add namespace="System.Web.Routing" />
-        <add namespace="TravelCatalog" />
+        <add namespace="TravelAlbum" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
