--- a/TravelAlbum.Models/TravelAlbum.Models.csproj
+++ b/TravelAlbum.Models/TravelAlbum.Models.csproj
@@ -54,7 +54,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApplicationUser.cs" />
-    <Compile Include="Image.cs" />
+    <Compile Include="TravelImage.cs" />
     <Compile Include="Languages.cs" />
     <Compile Include="Mountain.cs" />
     <Compile Include="Travel.cs" />
