Travel Translational Info Service added, view for adding Travels added, action for displaying the view for adding travels added, action for adding travels added, db context save changes implemetation added

--- a/TravelAlbum.DataServices/TravelAlbum.DataServices.csproj
+++ b/TravelAlbum.DataServices/TravelAlbum.DataServices.csproj
@@ -45,8 +45,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Contracts\ITravelService.cs" />
+    <Compile Include="Contracts\ITravelTranslationalInfoService.cs" />
     <Compile Include="TravelService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TravelTranslationalInfoService.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TravelAlbum.Data.Contracts\TravelAlbum.Data.Contracts.csproj">
