--- a/TravelAlbum.Web/Web.config
+++ b/TravelAlbum.Web/Web.config
@@ -24,6 +24,7 @@
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
+    <globalization uiCulture="bg" />
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
@@ -33,6 +34,7 @@
       <remove name="FormsAuthentication" />
       <remove name="ApplicationInsightsWebTracking" />
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" preCondition="managedHandler" />
+      <add name="CultureModule" type="TravelAlbum.HttpModules.CultureModule" />
     </modules>
     <validation validateIntegratedModeConfiguration="false" />
   </system.webServer>
