--- a/TravelAlbum.Data/TravelAlbum.Data.csproj
+++ b/TravelAlbum.Data/TravelAlbum.Data.csproj
@@ -62,7 +62,7 @@
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="TravelAlbumDbContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UnitOfWork.cs" />
+    <Compile Include="TravelAlbumEfDbContextSaveChanges.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
