--- a/TravelAlbum.UnitTests/TravelAlbum.UnitTests.csproj
+++ b/TravelAlbum.UnitTests/TravelAlbum.UnitTests.csproj
@@ -31,11 +31,18 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Castle.Core, Version=4.0.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
+      <HintPath>..\packages\Castle.Core.4.2.1\lib\net45\Castle.Core.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=10.1.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="Microsoft.Web.Infrastructure, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.Web.Infrastructure.1.0.0.0\lib\net40\Microsoft.Web.Infrastructure.dll</HintPath>
     </Reference>
+    <Reference Include="Moq, Version=4.7.142.0, Culture=neutral, PublicKeyToken=69f491c39445e920, processorArchitecture=MSIL">
+      <HintPath>..\packages\Moq.4.7.142\lib\net45\Moq.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Web" />
     <Reference Include="System.Web.Helpers, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
@@ -72,12 +79,32 @@
   <ItemGroup>
     <Compile Include="DummyTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TravelServiceTests\Constructor_should.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
+  </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\TravelAlbum.Data.Contracts\TravelAlbum.Data.Contracts.csproj">
+      <Project>{2357d8db-7819-4951-9585-ae71d121e068}</Project>
+      <Name>TravelAlbum.Data.Contracts</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\TravelAlbum.DataServices\TravelAlbum.DataServices.csproj">
+      <Project>{08a83da2-e768-4f78-8526-a87b0d441dde}</Project>
+      <Name>TravelAlbum.DataServices</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\TravelAlbum.Data\TravelAlbum.Data.csproj">
+      <Project>{b089a7ee-2f93-4921-9a56-10fcd37914ca}</Project>
+      <Name>TravelAlbum.Data</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\TravelAlbum.Models\TravelAlbum.Models.csproj">
+      <Project>{51a4d86b-6c8e-493a-8883-f316f8983274}</Project>
+      <Name>TravelAlbum.Models</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
