--- a/TravelAlbum.UnitTests/TravelAlbum.UnitTests.csproj
+++ b/TravelAlbum.UnitTests/TravelAlbum.UnitTests.csproj
@@ -77,9 +77,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataServices\TravelServiceTests\GetById_Should.cs" />
     <Compile Include="DummyTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TravelServiceTests\Constructor_should.cs" />
+    <Compile Include="DataServices\TravelServiceTests\Constructor_Should.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
