--- a/TravelAlbum.IntegrationTests/App.config
+++ b/TravelAlbum.IntegrationTests/App.config
@@ -5,8 +5,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-TravelAlbum-20170918121839.mdf;Initial Catalog=aspnet-TravelAlbum-20170918121839;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="TravelAlbum_SIT" connectionString="Data Source=.;Initial Catalog=TravelAlbumDB_SIT;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <!--add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-TravelAlbum-20170918121839.mdf;Initial Catalog=aspnet-TravelAlbum-20170918121839;Integrated Security=True" providerName="System.Data.SqlClient" /-->
+    <add name="DefaultConnection" connectionString="Data Source=.;Initial Catalog=TravelAlbumDB_SIT;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
