Testing files structure changed, SingleImage model added, ninject getter and setter for kernel added, integration tests setup

--- a/TravelAlbum.Models/TravelAlbum.Models.csproj
+++ b/TravelAlbum.Models/TravelAlbum.Models.csproj
@@ -56,6 +56,7 @@
     <Compile Include="ApplicationUser.cs" />
     <Compile Include="Language.cs" />
     <Compile Include="Mountain.cs" />
+    <Compile Include="SingleImage.cs" />
     <Compile Include="Travel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TravelImage.cs" />
