--- a/TravelAlbum.Web/TravelAlbum.Web.csproj
+++ b/TravelAlbum.Web/TravelAlbum.Web.csproj
@@ -245,7 +245,9 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\Images\bg_flag.jpg" />
     <Content Include="Content\Images\en_flag.jpg" />
+    <Content Include="Content\Images\topimage.jpg" />
     <Content Include="Content\nav-bar.css" />
+    <Content Include="Content\top-image.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
