--- a/TravelAlbum.Models/TravelAlbum.Models.csproj
+++ b/TravelAlbum.Models/TravelAlbum.Models.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Language.cs" />
     <Compile Include="Mountain.cs" />
     <Compile Include="SingleImage.cs" />
+    <Compile Include="SingleImageTranslationalInfo.cs" />
     <Compile Include="Travel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TravelImage.cs" />
