--- a/TravelAlbum.Web/TravelAlbum.Web.csproj
+++ b/TravelAlbum.Web/TravelAlbum.Web.csproj
@@ -37,7 +37,7 @@
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
+    <Optimize>false</Optimize>
     <OutputPath>bin\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
@@ -251,6 +251,7 @@
     <Content Include="Content\Images\en_flag.jpg" />
     <Content Include="Content\Images\topimage.jpg" />
     <Content Include="Content\nav-bar.css" />
+    <Content Include="Content\single-image.css" />
     <Content Include="Content\top-image.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
