--- a/TravelAlbum.UnitTests/TravelAlbum.UnitTests.csproj
+++ b/TravelAlbum.UnitTests/TravelAlbum.UnitTests.csproj
@@ -77,8 +77,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\HomeControllerTests\Index_Should.cs" />
     <Compile Include="Controllers\TravelsControllerTests\AddGet_Should.cs" />
     <Compile Include="Controllers\TravelsControllerTests\Details_Should.cs" />
+    <Compile Include="DataServices\SingleImageServiceTests\Constructor_Should.cs" />
+    <Compile Include="DataServices\SingleImageServiceTests\GetLatestSingleImages_Should.cs" />
     <Compile Include="DataServices\TravelServiceTests\GetById_Should.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DataServices\TravelServiceTests\Constructor_Should.cs" />
