--- a/TravelAlbum.Web/Views/Web.config
+++ b/TravelAlbum.Web/Views/Web.config
@@ -18,7 +18,7 @@
         <add namespace="System.Web.Optimization"/>
         <add namespace="System.Web.Routing" />
         <add namespace="TravelAlbum.Web" />
-        <add namespace="Resources"/>
+        <add namespace="TravelAlbum.Web.App_GlobalResources"/>
       </namespaces>
     </pages>
   </system.web.webPages.razor>
