Unit tests added for Details method in SingleImagesController

--- a/TravelAlbum.UnitTests/TravelAlbum.UnitTests.csproj
+++ b/TravelAlbum.UnitTests/TravelAlbum.UnitTests.csproj
@@ -82,6 +82,7 @@
     <Compile Include="Controllers\HomeControllerTests\Index_Should.cs" />
     <Compile Include="Controllers\SingleImagesControllerTests\AddGet_Should.cs" />
     <Compile Include="Controllers\SingleImagesControllerTests\Constructor_Should.cs" />
+    <Compile Include="Controllers\SingleImagesControllerTests\Details_Should.cs" />
     <Compile Include="Controllers\TravelsControllerTests\AddGet_Should.cs" />
     <Compile Include="Controllers\TravelsControllerTests\Constructor_Should.cs" />
     <Compile Include="Controllers\TravelsControllerTests\Details_Should.cs" />
