Comments functionality added to the Single Images details page - comment model added, comment service added, comments service interface added, comments service to interface binding in ninject added, Application User model amended to has Avatar and NickName, Single Image details page changed

--- a/TravelAlbum.DataServices/TravelAlbum.DataServices.csproj
+++ b/TravelAlbum.DataServices/TravelAlbum.DataServices.csproj
@@ -51,6 +51,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ApplicationUserService.cs" />
+    <Compile Include="CommentsService.cs" />
+    <Compile Include="Contracts\IApplicationUserService.cs" />
+    <Compile Include="Contracts\ICommentsService.cs" />
     <Compile Include="Contracts\ISingleImageTranslationalnfoService.cs" />
     <Compile Include="Contracts\ITravelImageService.cs" />
     <Compile Include="Contracts\ITravelService.cs" />
