--- a/TravelAlbum.Web/TravelAlbum.Web.csproj
+++ b/TravelAlbum.Web/TravelAlbum.Web.csproj
@@ -222,6 +222,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\CommentsController.cs" />
     <Compile Include="Controllers\CultureController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
@@ -232,6 +233,9 @@
     </Compile>
     <Compile Include="HttpModules\CultureModule.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\BatchCommentsModels\BatchCommentsViewModel.cs" />
+    <Compile Include="Models\CommentModels\AddCommentInputModel.cs" />
+    <Compile Include="Models\CommentModels\CommentViewModel.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\InputViewModels\CreateTravelInputModel.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
@@ -257,6 +261,7 @@
     <Content Include="Content\lightbox.css" />
     <Content Include="Content\nav-bar.css" />
     <Content Include="Content\index.css" />
+    <Content Include="Content\single-image-details.css" />
     <Content Include="Content\top-image.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
@@ -270,6 +275,7 @@
     <None Include="Properties\PublishProfiles\CustomProfile.pubxml" />
     <None Include="Properties\PublishProfiles\TravelAlbum - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
+    <Content Include="Scripts\Custom\comments-controller.js" />
     <Content Include="Scripts\Custom\single-images-loader.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
@@ -321,6 +327,9 @@
     <Content Include="Views\Travels\Add.cshtml" />
     <Content Include="Views\SingleImages\Add.cshtml" />
     <Content Include="Views\SingleImages\Details.cshtml" />
+    <Content Include="Views\Shared\_BatchCommentsPartial.cshtml" />
+    <Content Include="Views\Comments\Add.cshtml" />
+    <Content Include="Views\Shared\_SingleCommentPartial.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
