--- a/TravelAlbum.Web/TravelAlbum.Web.csproj
+++ b/TravelAlbum.Web/TravelAlbum.Web.csproj
@@ -223,7 +223,6 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\CommentsController.cs" />
-    <Compile Include="Controllers\CultureController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\SingleImagesController.cs" />
@@ -231,6 +230,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Helpers\TranslationalData.cs" />
     <Compile Include="HttpModules\CultureModule.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\BatchCommentsModels\BatchCommentsViewModel.cs" />
@@ -242,9 +242,10 @@
     <Compile Include="Models\SingleImageModels\LatestSingleImagesOutputModel.cs" />
     <Compile Include="Models\SingleImageModels\SingleImageInputModel.cs" />
     <Compile Include="Models\SingleImageModels\SingleImageOutputViewModel.cs" />
+    <Compile Include="Models\TravelModels\TravelSummaryOutputViewModel.cs" />
     <Compile Include="Models\TravelSearchInputViewModel.cs" />
-    <Compile Include="Models\TravelModels\TravelViewModel.cs" />
-    <Compile Include="Models\TravelModels\LatestTravelsOutputModel.cs" />
+    <Compile Include="Models\TravelModels\DetailsTravelOutputViewModel.cs" />
+    <Compile Include="Models\TravelModels\TravelsOutputViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -264,6 +265,7 @@
     <Content Include="Content\index.css" />
     <Content Include="Content\single-image-details.css" />
     <Content Include="Content\top-image.css" />
+    <Content Include="Content\travels.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -278,6 +280,7 @@
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\Custom\comments-controller.js" />
     <Content Include="Scripts\Custom\single-images-loader.js" />
+    <Content Include="Scripts\Custom\travels-loader.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
@@ -331,6 +334,7 @@
     <Content Include="Views\Shared\_BatchCommentsPartial.cshtml" />
     <Content Include="Views\Comments\Add.cshtml" />
     <Content Include="Views\Shared\_SingleCommentPartial.cshtml" />
+    <Content Include="Views\Travels\GetTravels.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
