--- a/TravelAlbum.Models/TravelAlbum.Models.csproj
+++ b/TravelAlbum.Models/TravelAlbum.Models.csproj
@@ -61,7 +61,8 @@
     <Compile Include="Travel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TravelImage.cs" />
-    <Compile Include="SingleImageComment.cs" />
+    <Compile Include="Comment.cs" />
+    <Compile Include="TravelObject.cs" />
     <Compile Include="TravelTranslationalInfo.cs" />
   </ItemGroup>
   <ItemGroup>
