--- a/TravelAlbum.Web/TravelAlbum.Web.csproj
+++ b/TravelAlbum.Web/TravelAlbum.Web.csproj
@@ -230,6 +230,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Helpers\LargeJSONResult.cs" />
     <Compile Include="Helpers\TranslationalData.cs" />
     <Compile Include="HttpModules\CultureModule.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
