Mountain model added, service for this model added

--- a/TravelAlbum.DataServices/TravelAlbum.DataServices.csproj
+++ b/TravelAlbum.DataServices/TravelAlbum.DataServices.csproj
@@ -55,11 +55,13 @@
     <Compile Include="CommentsService.cs" />
     <Compile Include="Contracts\IApplicationUserService.cs" />
     <Compile Include="Contracts\ICommentsService.cs" />
+    <Compile Include="Contracts\IMountainsService.cs" />
     <Compile Include="Contracts\ISingleImageTranslationalnfoService.cs" />
     <Compile Include="Contracts\ITravelObjectService.cs" />
     <Compile Include="Contracts\ITravelService.cs" />
     <Compile Include="Contracts\ITravelTranslationalInfoService.cs" />
     <Compile Include="Contracts\ISingleImageService.cs" />
+    <Compile Include="MountainsService.cs" />
     <Compile Include="SingleImageService.cs" />
     <Compile Include="SingleImageTranslationalInfoService.cs" />
     <Compile Include="TravelObjectService.cs" />
