Styles of the single images on the album page to show on click of single image bigger size of the image is shown, seeding of the database added

--- a/TravelAlbum.Web/TravelAlbum.Web.csproj
+++ b/TravelAlbum.Web/TravelAlbum.Web.csproj
@@ -257,20 +257,22 @@
     <Content Include="Content\Images\close.png" />
     <Content Include="Content\Images\en_flag.jpg" />
     <Content Include="Content\Images\loading.gif" />
+    <Content Include="Content\Images\magnifying_glass.png" />
     <Content Include="Content\Images\next.png" />
     <Content Include="Content\Images\prev.png" />
     <Content Include="Content\Images\topimage.jpg" />
     <Content Include="Content\lightbox.css" />
     <Content Include="Content\nav-bar.css" />
     <Content Include="Content\index.css" />
-    <Content Include="Content\SingeImages\SL373229.JPG" />
-    <Content Include="Content\SingeImages\SL373233.JPG" />
-    <Content Include="Content\SingeImages\SL373235.JPG" />
-    <Content Include="Content\SingeImages\SL373481.JPG" />
-    <Content Include="Content\SingeImages\SL373530.JPG" />
-    <Content Include="Content\SingeImages\SL373668.JPG" />
-    <Content Include="Content\SingeImages\SL373669.JPG" />
-    <Content Include="Content\SingeImages\SL373688.JPG" />
+    <Content Include="Content\SingleImages\SL373229.JPG" />
+    <Content Include="Content\SingleImages\SL373233.JPG" />
+    <Content Include="Content\SingleImages\SL373235.JPG" />
+    <Content Include="Content\SingleImages\SL373481.JPG" />
+    <Content Include="Content\SingleImages\SL373530.JPG" />
+    <Content Include="Content\SingleImages\SL373554.JPG" />
+    <Content Include="Content\SingleImages\SL373668.JPG" />
+    <Content Include="Content\SingleImages\SL373669.JPG" />
+    <Content Include="Content\SingleImages\SL373688.JPG" />
     <Content Include="Content\single-image-details.css" />
     <Content Include="Content\top-image.css" />
     <Content Include="Content\travels.css" />
