Preview functionality for single images added

--- a/TravelAlbum.Web/TravelAlbum.Web.csproj
+++ b/TravelAlbum.Web/TravelAlbum.Web.csproj
@@ -242,6 +242,7 @@
     <Compile Include="Models\SingleImageModels\LatestSingleImagesOutputModel.cs" />
     <Compile Include="Models\SingleImageModels\SingleImageInputModel.cs" />
     <Compile Include="Models\SingleImageModels\SingleImageOutputViewModel.cs" />
+    <Compile Include="Models\SingleImageModels\SingleImagePreviewOutputViewModel.cs" />
     <Compile Include="Models\TravelModels\TravelSummaryOutputViewModel.cs" />
     <Compile Include="Models\TravelSearchInputViewModel.cs" />
     <Compile Include="Models\TravelModels\DetailsTravelOutputViewModel.cs" />
@@ -265,15 +266,24 @@
     <Content Include="Content\nav-bar.css" />
     <Content Include="Content\index.css" />
     <Content Include="Content\SingleImages\SL373229.JPG" />
+    <Content Include="Content\SingleImages\SL373229_preview.JPG" />
     <Content Include="Content\SingleImages\SL373233.JPG" />
+    <Content Include="Content\SingleImages\SL373233_preview.jpg" />
     <Content Include="Content\SingleImages\SL373235.JPG" />
+    <Content Include="Content\SingleImages\SL373235_preview.jpg" />
     <Content Include="Content\SingleImages\SL373481.JPG" />
+    <Content Include="Content\SingleImages\SL373481_preview.jpg" />
     <Content Include="Content\SingleImages\SL373530.JPG" />
+    <Content Include="Content\SingleImages\SL373530_preview.jpg" />
     <Content Include="Content\SingleImages\SL373554.JPG" />
+    <Content Include="Content\SingleImages\SL373554_preview.jpg" />
     <Content Include="Content\SingleImages\SL373668.JPG" />
+    <Content Include="Content\SingleImages\SL373668_preview.jpg" />
     <Content Include="Content\SingleImages\SL373669.JPG" />
+    <Content Include="Content\SingleImages\SL373669_preview.jpg" />
     <Content Include="Content\SingleImages\SL373688.JPG" />
     <Content Include="Content\single-image-details.css" />
+    <Content Include="Content\SingleImages\SL373688_preview.jpg" />
     <Content Include="Content\top-image.css" />
     <Content Include="Content\travels.css" />
     <Content Include="favicon.ico" />
