View models unnecessary properties removed, new model added for previewing images and output model for the detailed view of image amended, search images page added

--- a/TravelAlbum.Models/TravelAlbum.Models.csproj
+++ b/TravelAlbum.Models/TravelAlbum.Models.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Mountain.cs" />
     <Compile Include="SingleImage.cs" />
     <Compile Include="SingleImageTranslationalInfo.cs" />
+    <Compile Include="Sorting.cs" />
     <Compile Include="Travel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Comment.cs" />
