--- a/TravelAlbum.Web/TravelAlbum.Web.csproj
+++ b/TravelAlbum.Web/TravelAlbum.Web.csproj
@@ -225,7 +225,7 @@
     <Compile Include="Controllers\CommentsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
-    <Compile Include="Controllers\SingleImagesController.cs" />
+    <Compile Include="Controllers\ImagesController.cs" />
     <Compile Include="Controllers\TravelsController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -351,13 +351,13 @@
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Travels\Details.cshtml" />
     <Content Include="Views\Travels\Add.cshtml" />
-    <Content Include="Views\SingleImages\Add.cshtml" />
-    <Content Include="Views\SingleImages\Details.cshtml" />
+    <Content Include="Views\Images\Add.cshtml" />
+    <Content Include="Views\Images\Details.cshtml" />
     <Content Include="Views\Shared\_BatchCommentsPartial.cshtml" />
     <Content Include="Views\Comments\Add.cshtml" />
     <Content Include="Views\Shared\_SingleCommentPartial.cshtml" />
     <Content Include="Views\Travels\GetTravels.cshtml" />
-    <Content Include="Views\SingleImages\SearchImages.cshtml" />
+    <Content Include="Views\Images\SearchImages.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
