Translation to labels added, mountains checkbox list for images added, search-images template styles amended

--- a/TravelAlbum.Web/TravelAlbum.Web.csproj
+++ b/TravelAlbum.Web/TravelAlbum.Web.csproj
@@ -266,6 +266,7 @@
     <Content Include="Content\lightbox.css" />
     <Content Include="Content\nav-bar.css" />
     <Content Include="Content\index.css" />
+    <Content Include="Content\search-images.css" />
     <Content Include="Content\SingleImages\SL373229.JPG" />
     <Content Include="Content\SingleImages\SL373229_preview.JPG" />
     <Content Include="Content\SingleImages\SL373233.JPG" />
