--- a/TravelAlbum.Web/Web.config
+++ b/TravelAlbum.Web/Web.config
@@ -19,7 +19,7 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-  </appSettings>
+  <add key="RouteDebugger:Enabled" value="true" /></appSettings>
   <system.web>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5.2" />
@@ -33,7 +33,7 @@
    <system.web.extensions>
        <scripting> 
            <webServices>
-               <jsonSerialization maxJsonLength="2147483644"/>
+               <jsonSerialization maxJsonLength="2147483644" />
            </webServices>
        </scripting>
    </system.web.extensions>
