--- a/TravelAlbum.Models/TravelAlbum.Models.csproj
+++ b/TravelAlbum.Models/TravelAlbum.Models.csproj
@@ -56,9 +56,9 @@
     <Compile Include="ApplicationUser.cs" />
     <Compile Include="Language.cs" />
     <Compile Include="Mountain.cs" />
+    <Compile Include="MountainTranslationalInfo.cs" />
     <Compile Include="SingleImage.cs" />
     <Compile Include="SingleImageTranslationalInfo.cs" />
-    <Compile Include="Sorting.cs" />
     <Compile Include="Travel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Comment.cs" />
