--- a/TravelAlbum.Web/TravelAlbum.Web.csproj
+++ b/TravelAlbum.Web/TravelAlbum.Web.csproj
@@ -249,6 +249,7 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\comments.css" />
+    <Content Include="Content\Images\backgound.jpg" />
     <Content Include="Content\Images\bg_flag.jpg" />
     <Content Include="Content\Images\close.png" />
     <Content Include="Content\Images\en_flag.jpg" />
